# PalaceOfCulture

./: .editorconfig  .gitattributes  .gitignore  BUILD-BRIEF.md  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
600BillionCWO/00_branding/: llms-full.md  llms.txt
600BillionCWO/00_branding/lore/: 01_BRAND_VOICE.md  02_AVATAR_RECREATION_STANDARD.md  03_CHARACTER_CANON.md  04_WORLD_CANON.md  05_PROMPT_LIBRARY.md  06_PUBLIC_FOOTPRINT.md  07_ASSET_PIPELINE.md  08_LORE_SUMMARY.md  09_INTRO_VIDEO_PROMPT.md  README.md
600BillionCWO/00_branding/member_system/: README.md  avatar_generation_linux.md  generator_library.json  member_registry.json  member_registry.schema.json  schema.sql  signup_flow.md  signup_profile.schema.json
apps/server/: README.md  package.json
apps/server/src/: index.ts
apps/server/src/api/: podcasts.ts
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: palace.glb
apps/web/src/: App.tsx
apps/web/src/character/: store.ts
apps/web/src/frontend/: data.ts  (+10 more)
docs/: AVATAR-PIPELINE.md  FRONTEND-HANDOVER.md  REVIT-EXPORT.md
docs/adr/: 0001-stack-and-runtime-topology.md  0002-chat-and-voice-transport.md  0003-character-data-and-avatar-builder.md  0004-media-value-live-open-standards.md  0005-voice-backends-hivetalk.md  README.md
infra/: HOSTING.md  README.md
services/world-agent/: README.md  pyproject.toml
services/world-agent/src/world_agent/: __init__.py  agent.py
services/world-agent/tests/: test_agent.py
viewers/: README.md
(+30 files in other folders)
