[project]
name = "world-agent"
version = "0.0.0"
description = "600 Billion world-agent — suggestion-only culture & atmosphere engine."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
